RESOLVED FIXED305492
AX: A malformed accessibility tree can cause infinite looping in AXCoreObject::unignoredChildren
https://bugs.webkit.org/show_bug.cgi?id=305492
Summary AX: A malformed accessibility tree can cause infinite looping in AXCoreObject...
Tyler Wilcock
Reported 2026-01-14 11:10:44 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-14 11:10:50 PST
Tyler Wilcock
Comment 2 2026-01-14 11:11:31 PST
Tyler Wilcock
Comment 3 2026-01-14 11:28:06 PST
EWS
Comment 4 2026-01-14 19:23:19 PST
Committed 305625@main (ace5138bf150): <https://commits.webkit.org/305625@main> Reviewed commits have been landed. Closing PR #56579 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.