Cherry-pick ace5138bf150. rdar://168362753

AX: A malformed accessibility tree can cause infinite looping in AXCoreObject::unignoredChildren
    https://bugs.webkit.org/show_bug.cgi?id=305492
    rdar://164424064

    Reviewed by Joshua Hoffman.

    Add a failsafe condition to avoid looping infinitely and eventually crashing when trying to create a vector beyond the
    max allowed size.

    * Source/WebCore/accessibility/AXCoreObject.cpp:
    (WebCore::AXCoreObject::unignoredChildren):

    Canonical link: https://commits.webkit.org/305625@main

Identifier: 305413.50@safari-7624-branch